# daad

./: .editorconfig  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  discord-ansi-adapter.py  discord-message.py  pyproject.toml  requirements.txt
daad/: discord_ansi_adapter.py  discord_message.py
test/: 1.ans  2.ans  3.ans  4.ans  5.ans  6.ans
