[project]
name = "daad"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "discord-py>=2.7.1",
]

[project.scripts]
discord-ansi-adapter = "daad.discord_ansi_adapter:main"
discord-message = "daad.discord_message:main"

[tool.black]
line-length = 100
